# ChangeLog for dev-perl/locale-maketext-lexicon
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/locale-maketext-lexicon/ChangeLog,v 1.54 2010/04/13 12:22:30 tove Exp $

*locale-maketext-lexicon-0.82 (13 Apr 2010)

  13 Apr 2010; Torsten Veller <tove@gentoo.org>
  +locale-maketext-lexicon-0.82.ebuild:
  Version bump

*locale-maketext-lexicon-0.81 (11 Apr 2010)

  11 Apr 2010; Torsten Veller <tove@gentoo.org>
  +locale-maketext-lexicon-0.81.ebuild:
  Version bump

*locale-maketext-lexicon-0.80 (09 Apr 2010)

  09 Apr 2010; Torsten Veller <tove@gentoo.org>
  +locale-maketext-lexicon-0.80.ebuild:
  Version bump

*locale-maketext-lexicon-0.79 (03 Mar 2010)

  03 Mar 2010; Torsten Veller <tove@gentoo.org>
  +locale-maketext-lexicon-0.79.ebuild:
  Version bump

*locale-maketext-lexicon-0.77 (30 Dec 2008)

  30 Dec 2008; Torsten Veller <tove@gentoo.org>
  -locale-maketext-lexicon-0.71.ebuild,
  +locale-maketext-lexicon-0.77.ebuild:
  Version bump

  30 Dec 2008; Torsten Veller <tove@gentoo.org>
  -locale-maketext-lexicon-0.73.ebuild,
  -locale-maketext-lexicon-0.75.ebuild,
  -locale-maketext-lexicon-0.76.ebuild:
  Cleanup

*locale-maketext-lexicon-0.76 (16 Dec 2008)

  16 Dec 2008; Torsten Veller <tove@gentoo.org>
  +locale-maketext-lexicon-0.76.ebuild:
  Version bump

*locale-maketext-lexicon-0.75 (25 Nov 2008)

  25 Nov 2008; Torsten Veller <tove@gentoo.org>
  +locale-maketext-lexicon-0.75.ebuild:
  Version bump

*locale-maketext-lexicon-0.73 (31 Oct 2008)

  31 Oct 2008; Torsten Veller <tove@gentoo.org>
  +locale-maketext-lexicon-0.73.ebuild:
  Version bump

*locale-maketext-lexicon-0.71 (06 Oct 2008)

  06 Oct 2008; Torsten Veller <tove@gentoo.org>
  +locale-maketext-lexicon-0.71.ebuild:
  Version bump

  15 Sep 2008; Torsten Veller <tove@gentoo.org>
  -locale-maketext-lexicon-0.46.ebuild,
  -locale-maketext-lexicon-0.53.ebuild,
  -locale-maketext-lexicon-0.61.ebuild,