@@ -2,23 +2,17 @@
 Hash: SHA1
 
 DIST Locale-Maketext-Lexicon-0.64.tar.gz 84998 RMD160 bbd0e9c5a1cc13ea2d505037927c194418122b9c SHA1 2e7a7128d933249194eeb8e0da7b57b80b7f4672 SHA256 019b7bca2f744cbb7ba58e3fe93f67898b1eb27f1bd5ea5fa902082a2aa5af75
-DIST Locale-Maketext-Lexicon-0.77.tar.gz 110682 RMD160 9594c9540e1873ed450e89683c78eee91eb07c29 SHA1 297229b18585d9c35c637b395627c8dd1090729f SHA256 2339b6839bbb4fe50140e08819731b60ac3d96648692b5d3bac0de8619902c0c
 DIST Locale-Maketext-Lexicon-0.79.tar.gz 116244 RMD160 674f8e23ea7335fa3286d4cbac92b9f900f3e916 SHA1 dc374e5b3ac8c689116dbc259b930505fa3856a6 SHA256 bd6e9964085298908171bff19f57eeb9592cab6c74303865b4eaa92174ed9c29
-DIST Locale-Maketext-Lexicon-0.80.tar.gz 119523 RMD160 b363b194cd3d1c43bd9256346bd8c8c42d7ce2a8 SHA1 0eba0bdf33541532f9946b4f4d0963e80b23dbac SHA256 0dec5e1aa6e2ff1e4969b23e06b9f2ca092989bd62137af6b594764dea68b932
-DIST Locale-Maketext-Lexicon-0.81.tar.gz 119700 RMD160 e35e8ede36e9876f4e9c110a4a051741b2b2cb9d SHA1 79420613095fe87d831e30088a5894d232710d28 SHA256 ca3fc3abfdcef672865f324dfec106deb1a02d116d4690ad85773ea23e8febb7
 DIST Locale-Maketext-Lexicon-0.82.tar.gz 119799 RMD160 4c7ad80afeb0f145ba8c7d0600ef6df87366ed05 SHA1 7b9d0c034a1febe8e9f7fc78d4a6c67058c591ce SHA256 6f39f08eb9cc9a4f07c0fa991f7bdf8e5dac33526eb4c4fa9eb882002edc31f7
 EBUILD locale-maketext-lexicon-0.64.ebuild 646 RMD160 5d673ddd110dc58d8e17836478d3de5c9e4845be SHA1 b7f9dde8bb7272023fe4cef3458f033adee6b1a2 SHA256 eca66e9d205f155701fa5c4b4b22d7c771e82f811a2807ff0d9b7cba02caa187
-EBUILD locale-maketext-lexicon-0.77.ebuild 624 RMD160 a87810366d035fc1dae6425d0df76439f09354e4 SHA1 afeb1ab34752db9595eb10ebf5381d5cf665eb6f SHA256 f2928caa6589f7a6383d7b15ee5381813239a572c59000a16b29958d5d6b1555
 EBUILD locale-maketext-lexicon-0.79.ebuild 631 RMD160 8065d23b50221e3c97ca88ace91eb7c36a7883a9 SHA1 3aea60166ff5d9fc40bd63cc5647afc05c84ee53 SHA256 c5696764339feb5b8d10f764f6c5fabbc5240a8dc0adac4b18905da7efbac9b4
-EBUILD locale-maketext-lexicon-0.80.ebuild 631 RMD160 550a91df1f23ecbce40605202dd2cd9e519d1ef0 SHA1 f7c7d850584fcc7f795d5465dfdb99d1050d7296 SHA256 3909d3a187445529a8b0d6be9707a66f1970fb3dc10c1e52b77986f96a8c2470
-EBUILD locale-maketext-lexicon-0.81.ebuild 631 RMD160 4a997bdfc1ce81129c3b4e45c1ef306a1e69a1a3 SHA1 71b9092cea1c4e5857c7c0f5622a02a04a6edd99 SHA256 902241f0bdebe164af25b617a91e178262992b47a5dcf04e9a2101cee0d9b3d4
 EBUILD locale-maketext-lexicon-0.82.ebuild 631 RMD160 fd6a24655bfd63dba8d50ed797f392b9b1c86fd3 SHA1 7feb5b79baefb4a738b216b193e719df5d98161a SHA256 fe1412de266d84726c42e652fad296634e7d2e232833beed071f7a532f32276a
-MISC ChangeLog 8295 RMD160 45f000625407b02c64523bcb3e7bb97bf30f298f SHA1 966e9ff6cefc7a850f83d354fc8fa8d8d43b5041 SHA256 9fd42ae47a23cd123b6f1153a51956ed49464f586940749e03d415a4dec88a07
+MISC ChangeLog 8474 RMD160 0aa49c714508c329b8a7de1b4a7a95eac841fba2 SHA1 135cfb5b217b97100b923d23f03952e5dff5d388 SHA256 4bfc1a06a248f26309cb797749db5ddc73ae9f50496aac182af2dac995d3b35d
 MISC metadata.xml 305 RMD160 647980838c590f54441a053916ea629e53e551c0 SHA1 99ef1deeae9a934fb6e46cf5fc4a5fcb8379a74a SHA256 f05dbef15061919972882cab07057e102760a542beba17d131194091401cd7ca
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.15 (GNU/Linux)
 
-iEYEARECAAYFAkvEYgsACgkQV3J2n04EauylfQCfbzr/2a9FoIHiV/Jktb9t1mSc
-7S0AoNvV9w/CDXFenpTtyiBVfZC09PAz
-=jQKM
+iEYEARECAAYFAkvEYqUACgkQV3J2n04EauwIjACeNbesDcpCvZoOnOms6d0lEJSM
+ODsAoJiVX/MFFJdzfNmlKohFaDGGmczn
+=agrT
 -----END PGP SIGNATURE-----
