@@ -1,6 +1,12 @@
 # ChangeLog for dev-perl/locale-maketext-lexicon
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/locale-maketext-lexicon/ChangeLog,v 1.54 2010/04/13 12:22:30 tove Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/locale-maketext-lexicon/ChangeLog,v 1.55 2010/04/13 12:25:03 tove Exp $
+
+  13 Apr 2010; Torsten Veller <tove@gentoo.org>
+  -locale-maketext-lexicon-0.77.ebuild,
+  -locale-maketext-lexicon-0.80.ebuild,
+  -locale-maketext-lexicon-0.81.ebuild:
+  Cleanup
 
 *locale-maketext-lexicon-0.82 (13 Apr 2010)
 
